--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pm2.5-tracker",
+  "name": "bangkok-air-quality-map",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "axios": "^1.3.4",
     "leaflet": "^1.9.3",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -23,7 +19,12 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
