--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "framer-motion": "^10.11.2",
     "leaflet": "^1.9.3",
     "next": "13.2.4",
     "react": "18.2.0",
